# stargazer-reborn

./: .gitignore  .mergify.yml  Brewfile.book  Cargo.toml  README.md  arch.drawio  bacon.toml  deploy_api_doc.sh  dprint.json  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: analysis.yml  test.yml
api/: Cargo.toml
api/src/: app.rs  config.rs  db.rs  handler.rs  lib.rs  main.rs  model.rs  test.rs  utils.rs
api/src/client/: blocking.rs  error.rs  mod.rs  non_blocking.rs
api/src/rpc/: error.rs  ext.rs  mod.rs  model.rs  models.rs  traits.rs  utils.rs  wrapper.rs
api/src/rpc/model/: add_task.rs  admin.rs  bot.rs  mod.rs  null.rs  user_query.rs
api/src/rpc/models/: mod.rs
api/src/server/: app.rs  config.rs  context.rs  db.rs  ext.rs  handler.rs  jwt.rs  mod.rs  test.rs
auth/: Cargo.toml
auth/src/: error.rs  lib.rs  model.rs
bots/telegram/: Cargo.toml
bots/telegram/src/: bot.rs  command.rs  config.rs  ext.rs  main.rs  util.rs
bots/telegram/src/config/: default.rs  mod.rs
coordinator/: Cargo.toml
coordinator/src/: app.rs  config.rs  db.rs  entity.rs  main.rs  tests.rs  utils.rs  worker.rs
core/: Cargo.toml
core/src/: adapter.rs  error.rs  lib.rs  models.rs  mq.rs  protocol.rs  utils.rs  value.rs
core_derive/: Cargo.toml
core_derive/src/: lib.rs
core_derive/tests/: compile_fail.rs
core_derive/tests/ui/: default_default_str.rs  default_default_str.stderr  default_inherit.rs  default_inherit.stderr  default_str_inherit.rs  default_str_inherit.stderr  duplicate_default.stderr
doc/: book.toml
doc/src/: SUMMARY.md  arch.drawio  config.md  introduction.md
doc/src/api/: index.md  rpc.md
doc/src/workers/: bililive.md  index.md
dummy/: Cargo.toml
dummy/src/: main.rs
middlewares/delay/: .gitignore  Cargo.toml
middlewares/delay/migrations/2022-04-04-102209_delayed_messages/: down.sql  up.sql
middlewares/delay/src/: config.rs  db.rs  main.rs  scheduler.rs  schema.rs
middlewares/delay/tests/: integration.rs
middlewares/translate/: Cargo.toml
middlewares/translate/src/: config.rs  main.rs  translate.rs
middlewares/translate/tests/: integration.rs
workers/base/: Cargo.toml
workers/base/fuzz/: Cargo.toml
workers/base/fuzz/fuzz_targets/: ring.rs
workers/base/src/: common.rs  config.rs  db.rs  ident.rs  lib.rs  ring.rs  runtime.rs  tests.rs  transport.rs  worker.rs
workers/base/src/change_events/: db.rs  gossip.rs  mod.rs
workers/base/src/gossip/: compression.rs  ident.rs  mod.rs  resolver.rs  runtime.rs  tests.rs
workers/base/src/gossip/transport/: certificate.rs  mod.rs  tests.rs  websocket.rs
workers/bililive/: Cargo.toml
workers/bililive/src/: bililive.rs  config.rs  main.rs  worker.rs
workers/twitter/: Cargo.toml
workers/twitter/src/: config.rs  main.rs  models.rs  mq.rs  twitter.rs  worker.rs
workers/youtube/: Cargo.toml
workers/youtube/src/: config.rs  main.rs  models.rs  registry.rs  server.rs  worker.rs
