[package]
name    = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sg-core = { package = "core", path = "../core" }
sg-auth = { package = "auth", path = "../auth" }

url             = "2.2.2"
http            = "0.2.6"
tracing         = "0.1.32"
futures         = "0.3.21"
mod_use         = "0.2.0"
serde_json      = "1.0.79"
humantime-serde = "1.1.1"
serde           = { version = "1.0.136", features = ["derive"] }
figment         = { version = "0.10.6", features = ["env"] }
isolanguage-1   = { version = "0.2.2", features = ["serde"] }
mongodb         = { version = "2.2.0-beta", features = ["bson-uuid-0_8"] }

# Dependencies for bin `fake-data`
rand = { version = "0.8.5", optional = true }
uuid = { version = "0.8.2", optional = true }
fake = { version = "2.4.3", optional = true, features = ["uuid"] }

# Dependencies for client
thiserror = { version = "1.0.30", optional = true }
reqwest   = { version = "0.11.10", optional = true, features = ["json"] }

# Dependencies for server
color-eyre         = { version = "0.6.1", optional = true }
axum               = { version = "0.4.8", optional = true }
tokio              = { version = "1.17.0", optional = true, features = ["rt", "rt-multi-thread", "time", "macros"] }
tower-http         = { version = "0.2.5", optional = true, features = ["cors", "trace", "auth"] }
jsonwebtoken       = { version = "8.0.1", optional = true }
tracing-subscriber = { version = "0.3.9", optional = true }

[dev-dependencies]
figment   = { version = "0.10.6", features = ["test"] }
reqwest   = { version = "0.11.10", features = ["blocking"] }
once_cell = "1.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
client          = ["dep:reqwest", "dep:thiserror"]
client_blocking = ["dep:reqwest", "dep:thiserror", "reqwest?/blocking"]
server          = ["dep:axum", "dep:tower-http", "dep:jsonwebtoken", "dep:tracing-subscriber", "dep:tokio", "mongodb/default", "dep:color-eyre"]
gen_fake        = ["dep:uuid", "dep:fake", "dep:rand", "dep:tokio", "dep:color-eyre", "dep:tracing-subscriber"]

[[bin]]
name              = "server"
path              = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name              = "fake"
path              = "src/bin/fake_data.rs"
required-features = ["gen_fake"]

[package.metadata."docs.rs"]
all-features = true
