[package]
name    = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sg-core = { package = "core", path = "../core" }
sg-auth = { package = "auth", path = "../auth" }

url             = "2.2.2"
http            = "0.2.8"
tracing         = "0.1.32"
futures         = "0.3.21"
mod_use         = "0.2.0"
serde_json      = "1.0.82"
http-serde      = "1.1.0"
humantime-serde = "1.1.1"
serde           = { version = "1.0.140", features = ["derive"] }
figment         = { version = "0.10.6", features = ["env"] }
isolanguage-1   = { version = "0.2.2", features = ["serde"] }
mongodb         = { version = "2.3.0", features = ["bson-uuid-0_8"], default-features = false }

# Dependencies for bin `fake-data`
rand = { version = "0.8.5", optional = true }
uuid = { version = "0.8.2", optional = true }
fake = { version = "2.5.0", optional = true, features = ["uuid"] }

# Dependencies for client
thiserror = { version = "1.0.30", optional = true }
reqwest   = { version = "0.11.10", optional = true, features = ["json"] }

# Dependencies for server
axum               = { version = "0.5.13", optional = true }
tokio              = { version = "1.20.0", optional = true, features = ["rt", "rt-multi-thread", "time", "macros"] }
tower-http         = { version = "0.3.4", optional = true, features = ["cors", "trace", "auth"] }
color-eyre         = { version = "0.6.2", optional = true }
jsonwebtoken       = { version = "8.1.1", optional = true }
tracing-subscriber = { version = "0.3.14", optional = true, features = ["env-filter"] }

[dev-dependencies]
once_cell = "1.13.0"
figment   = { version = "0.10.6", features = ["test"] }
reqwest   = { version = "0.11.10", features = ["blocking"] }
rand      = { version = "0.8.5", features = ["small_rng"] }

[features]
client          = ["dep:reqwest", "dep:thiserror"]
client_blocking = ["dep:reqwest", "dep:thiserror", "reqwest?/blocking"]
server          = ["dep:axum", "dep:tower-http", "dep:jsonwebtoken", "dep:tracing-subscriber", "dep:tokio", "mongodb/default", "dep:color-eyre"]
gen_fake        = ["dep:uuid", "dep:fake", "dep:rand", "dep:tokio", "dep:color-eyre", "dep:tracing-subscriber"]

[[bin]]
name              = "server"
path              = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name              = "fake"
path              = "src/bin/fake_data.rs"
required-features = ["gen_fake"]

[package.metadata."docs.rs"]
all-features = true
