[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
consistent_hash_ring = "0.8"
eyre = "0.6"
figment = { version = "0.10", features = ["env"] }
futures-util = { version = "0.3", features = ["sink"] }
humantime-serde = "1.0"
mongodb = "2.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sg-core = { package = "core", path = "../core" }
tap = "1.0"
tarpc = { version = "0.27", features = ["tokio1"] }
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "parking_lot", "time", "net", "macros"] }
tokio-tungstenite = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "0.8"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
