[package]
name = "core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
futures-util = { version = "0.3", features = ["sink"] }
isolanguage-1 = { version = "0.2", features = ["serde"] }
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver.git", rev = "6e7accb50bbfe471f64b290c3a45cda5affbd6fc", features = ["bson-uuid-0_8"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["rt"] }
bincode = "1.3"
tarpc = { version = "0.27", features = ["serde1", "tokio1"] }
thiserror = "1.0"
tokio-tungstenite = "0.17"
uuid = "0.8"

[dev-dependencies]
tokio = { version = "1.17", features = ["rt", "time", "net"] }
serde_json = "1.0"
