[package]
name = "core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mq = ["lapin", "tokio-reactor-trait", "tokio-executor-trait"]

[dependencies]
eyre = "0.6"
futures-util = { version = "0.3", features = ["sink"] }
isolanguage-1 = { version = "0.2", features = ["serde"] }
lapin = { version = "2.0", optional = true }
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver.git", rev = "6e7accb50bbfe471f64b290c3a45cda5affbd6fc", features = ["bson-uuid-0_8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tarpc = { version = "0.27", features = ["serde1", "tokio1"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["rt"] }
tokio-executor-trait = { version = "2.1", optional = true }
tokio-reactor-trait = { version = "1.1", optional = true }
tokio-tungstenite = "0.17"
tracing = "0.1"
uuid = "0.8"

[dev-dependencies]
tokio = { version = "1.17", features = ["rt", "time", "net"] }
