[package]
name = "core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mq = ["lapin", "tokio-reactor-trait", "tokio-executor-trait"]
mock = ["tokio/sync", "tokio-stream/sync"]
config = ["figment", "core_derive", "dotenvy"]

[dependencies]
async-trait = "0.1"
core_derive = { path = "../core_derive", optional = true }
dotenvy = { version = "0.15", optional = true }
eyre = "0.6"
figment = { version = "0.10", features = ["env"], optional = true }
futures-util = { version = "0.3", features = ["sink"] }
isolanguage-1 = { version = "0.2", features = ["serde"] }
itertools = "0.10"
lapin = { version = "2.0", optional = true }
mongodb = { version = "2.3.0", features = ["bson-uuid-0_8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
tarpc = { version = "0.29", features = ["serde1", "tokio1"] }
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt"] }
tokio-executor-trait = { version = "2.1", optional = true }
tokio-reactor-trait = { version = "1.1", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tokio-tungstenite = "0.17"
tracing = "0.1"
url = { version = "2.2.2", features = ["serde"] }
uuid = "0.8"

[dev-dependencies]
core_derive = { path = "../core_derive" }
figment = { version = "0.10", features = ["env", "test"] }
humantime-serde = "1.1"
tokio = { version = "1.20", features = ["rt", "time", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
