[package]
name    = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sg-core = { package = "core", path = "../../core", features = ["mq"] }
sg-api  = { package = "api", path = "../../api", features = ["client"] }

tracing            = "0.1"
mod_use            = "0.2"
futures            = "0.3"
color-eyre         = "0.6"
url                = { version = "2.2.2", features = ["serde"] }
serde              = { version = "1.0", features = ["derive"] }
tokio              = { version = "1.17", features = ["rt", "rt-multi-thread", "net", "macros"] }
figment            = { version = "0.10", features = ["env"] }
reqwest            = { version = "0.11", features = ["json"] }
teloxide           = { version = "0.9.0", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.10.0"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
