[package]
name = "delay"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "1.4"
eyre = "0.6"
figment = { version = "0.10", features = ["env"] }
futures-util = { version = "0.3" }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sg-core = { package = "core", path = "../../core", features = ["mq"] }
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "parking_lot", "time", "net", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
figment = { version = "0.10", features = ["env", "test"] }
tempfile = "3.3"
uuid = "0.8"
