[package]
name = "translate"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
eyre = "0.6"
figment = { version = "0.10", features = ["env"] }
futures-util = { version = "0.3" }
md5 = "0.7"
once_cell = "1.17"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sg-core = { package = "core", path = "../../core", features = ["mq", "config"] }
tokio = { version = "1.26", features = ["rt", "rt-multi-thread", "parking_lot", "time", "net", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
figment = { version = "0.10", features = ["env", "test"] }
