[package]
name = "base"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzzing = ["arbitrary"]

[dependencies]
arbitrary = { version = "1.1", features = ["derive"], optional = true }
async-trait = "0.1"
bincode = "1.3"
brotli = "3.3"
consistent_hash_ring = "0.8"
derivative = "2.2"
eyre = "0.6"
fnv = "1.0"
foca = { version = "0.4", features = ["tracing", "bincode-codec", "std"] }
futures = "0.3"
rand = "0.8"
rustls = "0.20"
rustls-pemfile = "1.0"
serde = "1.0"
serde_with = "1.14"
sg-core = { package = "core", path = "../../core" }
tap = "1.0"
tokio = { version = "1.20", features = ["sync", "time", "rt"] }
tokio-rustls = "0.23"
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
webpki = "0.22"

[dev-dependencies]
arbitrary = { version = "1.1", features = ["derive"] }
once_cell = "1.13"
pki = "0.1"
tokio = { version = "1.20", features = ["macros"] }
