[package]
name = "base"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.1", features = ["derive"], optional = true }
async-trait = "0.1"
bincode = "1.3"
brotli = "3.3"
consistent_hash_ring = "0.8"
derivative = "2.2"
eyre = "0.6"
fnv = "1.0"
foca = { version = "0.4", features = ["tracing", "bincode-codec", "std"] }
futures = "0.3"
mongodb = "2.3"
rand = "0.8"
rustls = "0.20"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.0"
sg-core = { package = "core", path = "../../core", features = ["config"] }
tap = "1.0"
tokio = { version = "1.20", features = ["sync", "time", "rt"] }
tokio-rustls = "0.23"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
uuid = "0.8"
webpki = "0.22"

[dev-dependencies]
arbitrary = { version = "1.1", features = ["derive"] }
figment = { version = "0.10", features = ["env", "test"] }
once_cell = "1.13"
pki = "0.1"
tokio = { version = "1.20", features = ["macros"] }
