[package]
name = "bililive"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bililive = "0.2.0-beta.5"
color-eyre = "0.6"
eyre = "0.6"
figment = { version = "0.10", features = ["env", "test"] }
futures-util = "0.3"
once_cell = "1.17"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sg-core = { package = "core", path = "../../core", features = ["mq", "config"] }
tap = "1.0"
tarpc = { version = "0.29", features = ["serde1", "tokio1"] }
tokio = { version = "1.25", features = ["rt", "rt-multi-thread", "parking_lot", "time", "net", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "0.8"
