[package]
name = "twitter"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
egg-mode = "0.16"
eyre = "0.6"
figment = { version = "0.10", features = ["env", "test"] }
futures-util = "0.3"
lapin = "2.0"
once_cell = "1.9"
parking_lot = "0.12"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sg-core = { package = "core", path = "../../core", features=["mq"] }
humantime-serde = "1.0"
tap = "1.0"
tarpc = { version = "0.28", features = ["serde1", "tokio1"] }
tokio = { version = "1.18", features = ["rt", "rt-multi-thread", "parking_lot", "time", "net", "macros"] }
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "0.8"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
