[package]
name = "youtube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
axum-xml = "0.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
sg-core = { package = "core", path = "../../core", features = ["mq"] }
figment = { version = "0.10", features = ["env", "test"] }
uuid = "0.8"
tarpc = { version = "0.27", features = ["serde1", "tokio1"] }
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "parking_lot", "time", "net", "macros"] }
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime-serde = "1.1"
once_cell = "1.10"
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
parking_lot = "0.12"
serde_json = "1.0"
futures = "0.3"
tap = "1.0"
url = "2.2"
serde_urlencoded = "0.7"