[package]
name = "youtube"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
axum-xml = "0.1"
color-eyre = "0.6"
eyre = "0.6"
figment = { version = "0.10", features = ["env", "test"] }
futures = "0.3"
humantime-serde = "1.1"
once_cell = "1.10"
parking_lot = "0.12"
quick-xml = "0.22"
reqwest = "0.11"
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sg-core = { package = "core", path = "../../core", features = ["mq"] }
tap = "1.0"
tarpc = { version = "0.27", features = ["serde1", "tokio1"] }
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "parking_lot", "time", "net", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2", features = ["serde"] }
uuid = "0.8"
